--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,15 +9,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    cyclestreets,
-    ggplot2,
-    matrixStats,
-    pct,
     sf,
-    stplanr,
     dplyr,
     simodels,
-    rlang
-Remotes:
-   itsleeds/pct
+    rlang,
+    tidyr,
+    purrr,
+    osrm
 URL: https://bicischools.github.io/bicischools/
