--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,15 @@ Authors@R:
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
+URL: https://bicischools.github.io/bicischools/
+Imports: 
+    dplyr,
+    osrm,
+    purrr,
+    rlang,
+    sf,
+    simodels,
+    tidyr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Imports: 
-    sf,
-    dplyr,
-    simodels,
-    rlang,
-    tidyr,
-    purrr,
-    osrm
-URL: https://bicischools.github.io/bicischools/
