--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,10 @@ Authors@R:
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 URL: https://bicischools.github.io/bicischools/
+Depends: 
+    R (>= 4.1.0)
 Imports: 
+    cyclestreets,
     dplyr,
     osrm,
     purrr,
