--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     purrr,
     sf,
     simodels,
-    tidyr
+    tidyr (>= 1.3.0),
+    stplanr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
