--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,13 @@ Imports:
     sf,
     simodels,
     tidyr (>= 1.3.0),
-    stplanr
+    stplanr,
+    pct,
+    rlang,
+    lifecycle,
+    cli,
+    glue,
+    withr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
