--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bici_routes)
 export(bici_routes_cyclestreets)
 export(bici_routes_osrm)
 export(cycle_bus_routes)
+export(filter_routes)
 export(get_models)
 export(sim_schools)
 import(rlang)
