--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,8 @@ Imports:
     pct,
     rlang,
     lifecycle,
-    cli,
     glue,
-    withr
+    units
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
