added function to calculate stats for routes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(bici_routes)
 export(bici_routes_cyclestreets)
 export(bici_routes_osrm)
+export(calc_route_stats)
 export(cycle_bus_routes)
 export(filter_routes)
 export(get_models)
+export(match_centroids)
 export(sim_schools)
 import(rlang)
 importFrom(glue,glue)
