--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,6 +36,9 @@ jobs:
           extra-packages: any::pkgdown, local::.
           needs: website
 
+      - uses: quarto-dev/quarto-actions/setup@v2
+        # Installs Quarto CLI for rendering qmd files
+
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
